# mini-lakehouse

./: .env  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.openmetadata.yml  docker-compose.yml  pyproject.toml
dagster_orchestration/: definitions.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: ARCHITECTURE.md  DBT-COMMANDS.md  DEMO-SCRIPT.md  DEMO1-CURATED.md  DEMO1-DREHBUCH.md  DEMO1-INGESTION.md  DEMO1-RESET.md  DEMO1-STAGING.md  DEMO2-DREHBUCH.md  DEMO2-INGESTION.md  DEMO2-MIGRATION.md  DEMO2-QUALITY-GATE.md  DEMO2-STATES.md  DEMO2-TRUSTED.md  DEMO3-MLFLOW-DREHBUCH.md  ESG-DATA-INVENTORY.md  MLflow-Slide-Notes.md  MLflow-Workshop.pptx  OPENMETADATA-PRAESENTATION.md  OPENMETADATA-SETUP.md  SETUP.md  WALKTHROUGH-SUPERSET.md  WALKTHROUGH.md
great_expectations/: .gitignore  great_expectations.yml
jupyter/: Dockerfile
mlflow/: Dockerfile
model-api/: app.py  requirements.txt
notebooks/: 01_iceberg_erkunden.ipynb  02_Taxi_Ingestion.ipynb  02_Taxi_erkunden.ipynb  02_time_travel_schema_evolution.ipynb  03_ml_fonds_co2_fussabdruck.ipynb  Untitled.ipynb  spark_init.py  test_real_esg_api.ipynb
scripts/: 1  README.md  demo2-state-verify.sh  demo2-state.sh  drop-fondspreise-table.py  duck-ingestion_yellow_taxi.py  fetch-taxi.sh  generate-fondspreise.py  generate-nzdpu-v2.py  generate-sample-data.py  ingest-cdp.py  ingest-fondspreise.py  ingest-mitarbeiterzahlen.py  ingest-nzdpu.py  ingest_yellowtaxi.sh  ingest_yellowtaxi_multifile.sh  ingest_yellowtaxi_multifile_parallel.sh  init-buckets.sh  init-cdp-table.py  init-nzdpu-table.py  (+19 more)
(+49 files in other folders)
